# STM32-Mechanical-Keyboard

./: .gitignore  .project  2017-09-21-Note-18-14.xoj  CMakeLists.txt  GDBCommands  LICENSE  NuceloKeyboardController.ioc  README.md
Debug/: NuceloKeyboardController.elf  makefile  objects.list  output.map  sources.mk
Debug/Src/: AT24Cxx_stm32_hal.d  DS3231_stm32_hal.d  freertos.d  keyboard.d  keymap.d  main.d  process.d  scan.d  stm32f4xx_hal_msp.d  stm32f4xx_it.d  subdir.mk  system_stm32f4xx.d  usb_device.d  usbd_conf.d  usbd_desc.d  visEffect.d  ws2812b.d
HID/Inc/: HIDClassCommon.h  buffer_resolver.h  config.h  defconfig.h  defkeymaps.h  descriptors.h  keyboard_controller.h  keymap.h  keymap_config.h  ll.h  lookup.h  matrix_scanner.h  outbox.h  scanbuf.h  tester.h
HID/Src/: buffer_resolver.c  keyboard_controller.c  keymap.c  ll.c  lookup.c  matrix_scanner.c  outbox.c  scanbuf.c
HID_config/: README.md  usbd_hid.c  usbd_hid.h
HID_report_config/Inc/: usbd_hid.h
HID_report_config/Src/: usbd_hid.c
Inc/: AT24Cxx_stm32_hal.h  FreeRTOSConfig.h  HIDClassCommon.h  extern.h  keyboard.h  keyboard_config.h  keymap.h  main.h  process.h  scan.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usb_device.h  usbd_conf.h  ws2812b.h
NuceloKeyboardController/: .cproject  .mxproject  .project  NuceloKeyboardController Debug (1).cfg  NuceloKeyboardController.ioc
NuceloKeyboardController/Debug/: .gitignore  NuceloKeyboardController.elf  makefile  objects.list  output.map  sources.mk
NuceloKeyboardController/Inc/: AT24Cxx_stm32_hal.h  CLI.h  DS3231_stm32_hal.h  HIDClassCommon.h  LEDs.h  SN54HC595.h  datatypes.h  error.h  extern.h  ffconf.h  keyboard.h  keyboard_config.h  keymap.h  layers.h  lcd.h  lookup.h  macro.h  main.h  mouse.h  process.h  scan.h  screen.h  sdcard.h  shift.h  states.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  types.h  usb_device.h  visEffect.h  ws2812b.h
NuceloKeyboardController/Src/: CLI.c  SN54HC595.c  datatypes.c  keyboard.c  keymap.c  layers.c  lcd.c  lookup.c  macro.c  main.c  mouse.c  process.c  scan.c  screen.c  sdcard.c  shift.c  states.c  stm32f4xx_hal_msp.c  usb_device.c  user_diskio.c  visEffect.c  ws2812b.c
NuceloKeyboardController/libraries/: fonts.h  ssd1306.h
Src/: AT24Cxx_stm32_hal.c  keyboard.c  keymap.c  main.c  process.c  scan.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f4xx_hal_msp.c  usbd_conf.c  usbd_desc.c  visEffect.c
V2/: .cproject  .gitignore  .mxproject  .project  .project_org  New_configuration (1).cfg  V2.ioc  V2.launch
V2.0/: .cproject  .mxproject  NuceloKeyboardController.ioc
V2.0/Debug/: .gitignore  NuceloKeyboardController.elf  V2.0.elf  makefile  objects.list  output.map
V2.0/Inc/: CLI.h  FreeRTOSConfig.h  SN54HC595.h  layers.h  list.h  macro.h  main.h  screen.h  states.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  types.h  usbd_conf.h
V2.0/Src/: CLI.c  SN54HC595.c  datatypes.c  fonts.c  layers.c  list.c  main.c  scan.c  shift.c  ssd1306.c  states.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usb_device.c  usbd_conf.c  usbd_desc.c  ws2812b.c
V2/Debug/: .gitignore  V2.elf  V2.hex  V2.list  makefile  objects.list  output.map  sources.mk
V2/Inc/: AT24Cxx_stm32_hal.h  CLI.h  DS3231_stm32_hal.h  FreeRTOSConfig.h  HIDClassCommon.h  HID_config.h  LED_effects.h  LEDs.h  SN54HC595.h  buffers.h  config.h  datatypes.h  devices.h  error.h  extern.h  fonts.h  framebuffer.h  keyboard.h  keyboard_config.h  keyboard_private.h  keymap.h  keymap_defaults.h  keymap_private.h  layers.h  linked_list.h  lookup.h  macro.h  main.h  mouse.h  pipes.h  scan.h  screen.h  screen_API.h  screen_config.h  send.h  ssd1306.h  states.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  types.h  (+6 more)
V2/Src/: CLI.c  DS3231_stm32_hal.c  LEDs.c  SN54HC595.c  datatypes.c  devices.c  framebuffer.c  freertos.c  keyboard.c  keymap.c  layers.c  lookup.c  macro.c  main.c  mouse.c  scan.c  screen.c  send.c  ssd1306.c  states.c  usb_device.c  usbd_desc.c  visEffect.c  ws2812b.c
cmake_proj/: CMakeLists.txt
cmake_proj/Inc/: CLI.h  HID_config.h  LED_effects_config.h  LEDs.h  SN54HC595.h  buffers.h  config.h  keyboard.h  linked_list.h  macro.h  mouse.h  pipes.h  screen.h  send.h  ssd1306.h  states.h  stm32f4xx_it.h  usb_device.h  usbd_conf.h  usbd_desc.h  visEffect.h  ws2812b.h
cmake_proj/Src/: AT24Cxx_stm32_hal.c  DS3231_stm32_hal.c  keyboard.c  keymap.c  linked_list.c  macro.c  main.c  mouse.c  screen.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usbd_conf.c  usbd_desc.c  ws2812b.c
cmake_proj/cmake/: FindCMSIS.cmake  FindFreeRTOS.cmake  FindSTM32HAL.cmake  FindUSBDevice.cmake
doc/: Doxyfile
doc/html/: AT24Cxx__stm32__hal_8c.html  AT24Cxx__stm32__hal_8h.html  AT24Cxx__stm32__hal_8h_source.html  CLI_8c.html  CLI_8h.html  CLI_8h_source.html  DS3231__stm32__hal_8c.html  DS3231__stm32__hal_8h.html  DS3231__stm32__hal_8h_source.html  FreeRTOSConfig_8h.html  FreeRTOSConfig_8h_source.html  HIDClassCommon_8h.html  HIDClassCommon_8h_source.html  SN54HC595_8c.html  SN54HC595_8h.html  SN54HC595_8h_source.html  annotated.html  classes.html  datatypes_8c.html  datatypes_8h.html  datatypes_8h_source.html  dir_65157e439c706bbd2af5306bcfdb40bd.html  dir_91ec91170fbffabc815b574deec3a91b.html  dir_e62092f6d07c6a8611f9dc83cba117c4.html  error_8h.html  error_8h_source.html  extern_8h.html  extern_8h_source.html  files.html  fonts_8c.html  fonts_8h.html  fonts_8h_source.html  freertos_8c.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  (+285 more)
doc/latex/: AT24Cxx__stm32__hal_8c.tex  AT24Cxx__stm32__hal_8h.tex  CLI_8c.tex  CLI_8h.tex  DS3231__stm32__hal_8c.tex  DS3231__stm32__hal_8h.tex  FreeRTOSConfig_8h.tex  HIDClassCommon_8h.tex  SN54HC595_8c.tex  SN54HC595_8h.tex  annotated.tex  datatypes_8c.tex  datatypes_8h.tex  dir_65157e439c706bbd2af5306bcfdb40bd.tex  dir_91ec91170fbffabc815b574deec3a91b.tex  dir_e62092f6d07c6a8611f9dc83cba117c4.tex  error_8h.tex  extern_8h.tex  files.tex  (+113 more)
firmware/: .cproject  .mxproject  .project  keyboard_firmware.ioc  keyboard_firmware.launch
hardware/: README.md
(+551 files in other folders)
